extract most js into directive

--- a/tools/tools/index.html
+++ b/tools/tools/index.html
@@ -35,14 +35,10 @@
         <div class="col-sm-4">
           <label>Svg</label>
           <div class="">
-            <button class="btn btn-default" onclick="setMode('commits')"><i class="fa fa-circle"></i></button>
-            <button class="btn btn-default" onclick="setMode('links')"><i class="fa fa-share-alt"></i></button>
-            <button class="btn btn-default" onclick="btnAddRowClicked()"><i class="fa fa-plus"></i> Add row</button>
-            <button class="btn btn-default" onclick="btnSaveClicked()">Save</button>
-            <button class="btn btn-default" onclick="btnLoadClicked()">Load</button>
-            <button class="btn btn-default">Add column</button>
+            <button class="btn btn-default" ng-click="btnSaveClicked()">Save</button>
+            <button class="btn btn-default" ng-click="btnLoadClicked()">Load</button>
           </div>
-          <svg id="tree" class="form-control"></svg>
+          <project tree="tree" selected-node="selectedNode"></project>
         </div>
 
         <div class="col-sm-4">
@@ -79,231 +75,11 @@
     </div>
     <script>
       new Clipboard('.copy');
-      var mode = 'commits';
-      var firstCommit = null;
-      var selectedPath = null;
-      var selectedNode = null;
-
-      var setMode = function(modeName) {
-        mode = modeName;
-        render();
-      };
-
-      var tree = [];
-
-      var btnAddRowClicked = function() {
-        tree.push({id: tree.length.toString(), parents: [], column: 0, parentsPaths: {}});
-        render();
-      };
-
-
-      var btnSaveClicked = function() {
-        localStorage.setItem('tree', JSON.stringify(tree));
-      };
-
-
-      var btnLoadClicked = function() {
-        var savedTree = localStorage.getItem('tree');
-        tree = JSON.parse(savedTree);
-        render();
-      };
-
-
-      var lineFunction = d3.svg.line()
-        .x(function(d) { return d.x; })
-        .y(function(d) { return d.y; })
-        .interpolate("linear");
-
 
       var render = function() {
-        var xGap = 30;
-        var yGap = 30;
-        var cols = 10;
-        var radius = 8;
-
-        var svg = d3.select($('#tree')[0]);
-        svg.style('height', (tree.length + 1) * yGap + radius);
-        svg.selectAll('*').remove();
-
-        var linesGroup = svg.append('g');
-
-        var lineGroup = linesGroup.selectAll('lines')
-          .data(tree)
-          .enter()
-          .append('g');
-
-        lineGroup
-          .append('path')
-          .attr('d', function(path, idx) {
-            var d = [];
-            d.push({x: 0, y: idx * yGap + yGap});
-            d.push({x: $('#tree').width(), y: idx * yGap + yGap});
-            return lineFunction(d)
-          })
-          .attr('stroke-width', 1)
-          .attr('fill', 'none')
-          .attr('stroke', '#aaa')
-          .on('click', function(a, row, c) {
-            tree.splice(row, 1);
-            render();
-          });
-
-        if (mode == 'commits') {
-          lineGroup.selectAll('dummyCircle')
-            .data(function(d, i) { return _.range(cols); })
-            .enter()
-            .append('circle')
-              .attr('r', radius)
-              .attr('stroke', '#ddd')
-              .attr('fill', '#fff')
-              .attr('cx', function(c) { return c * xGap + xGap; })
-              .attr('cy', function(c, i, a) { return a * yGap + yGap })
-              .on('mouseenter', function() { d3.select(this).attr('fill', '#f00'); })
-              .on('mouseleave', function() { d3.select(this).attr('fill', '#fff'); })
-              .on('click', function(a,b,c) {
-                tree[c].column = a;
-                render();
-              });
-        } else {
-          lineGroup.selectAll('dummyCircle')
-            .data(function(d, i) { return _.range(cols); })
-            .enter()
-            .append('circle')
-              .attr('r', 5)
-              .attr('fill', 'none')
-              .attr('stroke', '#ddd')
-              .attr('fill', '#ddd')
-              .attr('cx', function(c) { return c * xGap + xGap; })
-              .attr('cy', function(c, i, a) { return a * yGap + yGap })
-              .on('mousedown', function() {})
-              .on('mouseup', function(item, columnIndex, rowIndex) {
-                if (selectedPath) {
-                  console.log(selectedPath, columnIndex, rowIndex);
-                  addPathNode(selectedPath[1], columnIndex, rowIndex);
-                  console.log(selectedPath[1]);
-                  selectedPath = null;
-                  render();
-                }
-              });
-        }
-
-        var addPathNode = function(path, x, y) {
-          if (y == path.path[0][1] && x > path.path[0][0]) {
-            path.path.splice(1, 0, [x, y, 2]);
-            return;
-          }
-          for (var i = 0; i < path.path.length; i++) {
-            var pathItem = path.path[i];
-            if (y > pathItem[1]) {
-              continue;
-            }
-            path.path.splice(i, 0, [x, y, 1]);
-            break;
-          }
-        };
-
-        var nodesGroup = svg.append('g').attr('class', 'nodes');
-        var nodeGroup = nodesGroup.selectAll('nodes')
-          .data(tree)
-          .enter()
-          .append('g')
-          .attr('class', 'node');
-
-        // Each paths
-        var pathsGroup = nodeGroup
-          .append('g')
-          .attr('class', 'paths');
-        pathsGroup
-          .selectAll('g')
-          .data(function(node) {
-            return _.map(node.parentsPaths, function(pathItem, parentId) { return [node, pathItem, parentId]; });
-          })
-          .enter()
-          .append('path')
-            .attr('d', function(item) {
-              var node = item[0];
-              var path = item[1];
-              var parentId = item[2];
-              var p = tree[parentId];
-              var result = [];
-              _.each(path.path, function(item) {
-                var point = {
-                  x: item[0] * xGap + xGap,
-                  y: item[1] * yGap + yGap
-                };
-                if (item[2] == 2) {
-                  point.y += 6;
-                }
-                if (item[2] == 1) {
-                  point.y -= 6;
-                }
-                result.push(point);
-              });
-              return lineFunction(result)
-            })
-            .attr('stroke-width', 3)
-            .attr('fill', 'none')
-            .attr('stroke', function(item) {
-              return item[1].color;
-            })
-            .on('mousedown', function(item) {
-              selectedPath = item;
-            })
-            .on('click', function(item) {
-              var node = item[0];
-              var idx = _.indexOf(node.parents, item[1]);
-              tree[node.id].parents.splice(idx, 1);
-              render();
-            });
-
-        var addPath = function(rowIndex) {
-          var firstNode = tree[firstCommit];
-          var lastNode = tree[rowIndex];
-          tree[firstCommit].parents.push(rowIndex.toString());
-          tree[firstCommit].parents = _.sortBy(tree[firstCommit].parents);
-          tree[firstCommit].parentsPaths[rowIndex.toString()] = {
-            path: [
-              [firstNode.column, parseInt(firstNode.id), 0],
-              [lastNode.column, parseInt(lastNode.id), 0]],
-            color: '#5aa1be'};
-          console.log(tree[firstCommit].parentsPaths[rowIndex.toString()]);
-          firstCommit = null;
-          render();
-        };
-
-        // Each nodes
-        nodeGroup.append('circle')
-          .attr('r', radius)
-          .attr('fill', '#0f0')
-          .attr('stroke', '#000')
-          .attr('cx', function(node) {
-            return node.column * xGap + xGap;
-          })
-          .attr('cy', function(node, idx) { return idx * yGap + yGap })
-          .on('mouseenter', function() { d3.select(this).attr('fill', '#f00'); })
-          .on('mouseleave', function() { d3.select(this).attr('fill', '#0f0'); })
-          .on('mousedown', function(node, rowIndex) {
-            firstCommit = rowIndex;
-          })
-          .on('mouseup', function(node, rowIndex) {
-            if (firstCommit == rowIndex) {
-              return;
-            }
-            if (firstCommit > rowIndex) {
-              firstCommit = [rowIndex, rowIndex = firstCommit][0]; // swap vars
-            }
-            if (!_.includes(tree[firstCommit].parents, rowIndex)) {
-              addPath(rowIndex);
-            }
-          })
-          .on('click', function(node) {
-            selectedNode = node;
-          });
-
-
-        generateTestsFile();
-        generateShellScript();
-        generateInputFile();
+        //generateTestsFile();
+        //generateShellScript();
+        //generateInputFile();
       };
 
       var generateInputFile = function() {
