--- a/tools/tools/index.html
+++ b/tools/tools/index.html
@@ -26,7 +26,7 @@
 
       <div class="row">
         <div class="col-sm-4">
-          <input type="text" class="form-control" placeholder="Test name" />
+          <input ng-model="input.fileName" type="text" class="form-control" placeholder="Test name" />
         </div>
       </div>
 
