--- a/tools/tools/index.html
+++ b/tools/tools/index.html
@@ -38,7 +38,7 @@
             <button class="btn btn-default" ng-click="btnSaveClicked()">Save</button>
             <button class="btn btn-default" ng-click="btnLoadClicked()">Load</button>
           </div>
-          <project tree="tree" selected-node="selectedNode"></project>
+          <project tree="tree" selected-node="selectedNode" colors="colors"></project>
         </div>
 
         <div class="col-sm-4">
