--- a/tools/tools/index.html
+++ b/tools/tools/index.html
@@ -47,11 +47,11 @@
             <label>Column:</label>
             <input ng-model="selectedNode.column" type="text" class="form-control" />
             <label>Color:</label>
-            <input ng-model="selectedNode.color" type="text" class="form-control" />
+            <select ng-model="selectedNode.color" ng-options="color for color in colors" class="form-control"></select>
             <div ng-repeat="(key, path) in selectedNode.parentsPaths">
               <h2>Path to {{key}}:</h2>
               <label>Color:</label>
-              <input ng-model="selectedNode.parentsPaths[key].color" type="text" class="form-control" />
+              <select ng-model="selectedNode.parentsPaths[key].color" ng-options="color for color in colors" class="form-control"></select>
               <label>Path:</label>
               <div ng-repeat="point in path.path">
                 <input ng-model="selectedNode.parentsPaths[key].path[$index]" type="text" class="form-control" />
