include new vendors

--- a/tools/tools/index.html
+++ b/tools/tools/index.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="../vendors/font-awesome-4.4.0/css/font-awesome.min.css" type="text/css" media="screen" charset="utf-8" />
     <script src="../vendors/angular.min.js"></script>
     <script src="../vendors/angular-sanitize.min.js"></script>
+    <script src="../vendors/angular-local-storage.min.js"></script>
     <script src="../vendors/d3.min.js"></script>
     <script src="../vendors/lodash.min.js"></script>
     <script src="../vendors/clipboard.min.js"></script>
     <script src="../vendors/jquery.min.js"></script>
     <script src="../vendors/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../vendors/ui-bootstrap-tpls-1.2.4.min.js"></script>
     <script src="./js/controllers/HomeController.js"></script>
     <script src="./js/directives/directives.js"></script>
     <style>
