--- a/tools/tools/index.html
+++ b/tools/tools/index.html
@@ -14,6 +14,7 @@
     <script src="../vendors/bootstrap/js/bootstrap.min.js"></script>
     <script src="../vendors/ui-bootstrap-tpls-1.2.4.min.js"></script>
     <script src="./js/controllers/HomeController.js"></script>
+    <script src="./js/controllers/LoadModalController.js"></script>
     <script src="./js/directives/directives.js"></script>
     <style>
       #tree {
