--- a/tools/tools/index.html
+++ b/tools/tools/index.html
@@ -61,21 +61,22 @@
               <label>Path:</label>
               <div ng-repeat="point in path.path">
                 <div class="row">
-                  <div class="col-sm-4">
+                  <div class="col-sm-2">
                     <input ng-model="selectedNode.parentsPaths[key].path[$index][0]" type="text" class="form-control" />
                   </div>
-                  <div class="col-sm-4">
+                  <div class="col-sm-2">
                     <input ng-model="selectedNode.parentsPaths[key].path[$index][1]" type="text" class="form-control" />
                   </div>
-                  <div class="col-sm-4">
+                  <div class="col-sm-2">
                     <input ng-model="selectedNode.parentsPaths[key].path[$index][2]" type="text" class="form-control" />
+                  </div>
+                  <div class="col-sm-6">
                   </div>
                 </div>
               </div>
             </div>
           </div>
 
-          <code><pre ng-bind-html="highlight(tree)"></pre></code>
         </div>
 
         <div class="col-sm-4">
@@ -100,6 +101,14 @@
               <textarea id="shell" class="form-control" readonly></textarea>
             </div>
           </div>
+          <div class="row">
+            <div class="col-sm-12">
+              <label>Structure</label>
+              <button class="copy btn btn-default btn-xs" data-clipboard-target="#shell">Copy</button>
+              <code><pre ng-bind-html="highlight(tree)"></pre></code>
+            </div>
+          </div>
+
         </div>
 
       </div>
