Button to move point up

--- a/tools/tools/index.html
+++ b/tools/tools/index.html
@@ -75,6 +75,7 @@
                   </div>
                   <div class="col-sm-6">
                     <button ng-click="btnMoveDownClicked(selectedNode.parentsPaths[key].path, $index)" class="btn btn-default" uib-tooltip="Move down"><i class="fa fa-arrow-down"></i></button>
+                    <button ng-click="btnMoveUpClicked(selectedNode.parentsPaths[key].path, $index)" class="btn btn-default" uib-tooltip="Move up"><i class="fa fa-arrow-up"></i></button>
                     <button ng-click="btnRemovePointClicked(selectedNode.parentsPaths[key].path, $index)" class="btn btn-danger" uib-tooltip="Remove point"><i class="fa fa-times"></i></button>
                   </div>
                 </div>
