--- a/tools/tools/index.html
+++ b/tools/tools/index.html
@@ -110,7 +110,8 @@
           <div class="row">
             <div class="col-sm-12">
               <label>Structure</label>
-              <code><pre ng-bind-html="highlight(tree)"></pre></code>
+              <button class="copy btn btn-default btn-xs" data-clipboard-target="#structure">Copy</button>
+              <textarea id="structure" class="form-control" readonly>{{toJson(tree)}}</textarea>
             </div>
           </div>
 
