--- a/tools/renderer/index.html
+++ b/tools/renderer/index.html
@@ -27,7 +27,7 @@
           <option>Choose an example</option>
         </select>
       </div>
-      <div id="json-group" id="json-group" class="form-group">
+      <div id="json-group" class="form-group">
         <textarea id="json" class="form-control"></textarea>
       </div>
       <div class="form-group">
