--- a/tools/renderer/index.html
+++ b/tools/renderer/index.html
@@ -55,7 +55,7 @@
         render();
       });
 
-      var render = function() {
+      const render = function() {
         const jsonText = $('#json').val();
         let tree;
         try {
