--- a/tools/renderer-rows/index.html
+++ b/tools/renderer-rows/index.html
@@ -7,7 +7,7 @@
     <script src="vendors/underscore.min.js"></script>
     <script src="vendors/jquery.min.js"></script>
     <script src="vendors/bootstrap/js/bootstrap.min.js"></script>
-    <script src="../renderer/examples.js"></script>
+    <script src="examples.js"></script>
     <style>
         #json {
             height: 200px;
