--- a/tools/renderer/index-rows.html
+++ b/tools/renderer/index-rows.html
@@ -21,6 +21,14 @@
 <body>
 <div class="container">
     <h1>Tree renderer rows</h1>
+
+    <div class="form-group">
+        <ul>
+            <li><a href="/index.html">Single SVG renderer</a></li>
+            <li><a href="/index-rows.html">Table rows renderer</a></li>
+        </ul>
+    </div>
+
     <div class="form-group">
         <label>Json:</label>
         <select class="form-control" id="examples">
