--- a/tools/renderer/index.html
+++ b/tools/renderer/index.html
@@ -22,6 +22,12 @@
     <div class="container">
       <h1>Tree renderer</h1>
       <div class="form-group">
+        <ul>
+          <li><a href="/index.html">Single SVG renderer</a></li>
+          <li><a href="/index-rows.html">Table rows renderer</a></li>
+        </ul>
+      </div>
+      <div class="form-group">
         <label>Json:</label>
         <select class="form-control" id="examples">
           <option>Choose an example</option>
