--- a/tools/renderer/index-rows.html
+++ b/tools/renderer/index-rows.html
@@ -24,8 +24,8 @@
 
     <div class="form-group">
         <ul>
-            <li><a href="/index.html">Single SVG renderer</a></li>
-            <li><a href="/index-rows.html">Table rows renderer</a></li>
+            <li><a href="index.html">Single SVG renderer</a></li>
+            <li><a href="index-rows.html">Table rows renderer</a></li>
         </ul>
     </div>
 
